# adminds

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  INFRASTRUCTURE.md  README.md  package.json
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/adminds_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: auth.py  config.py  main.py  schemas.py
backend/app/analytics/: db.py  routes.py
backend/app/classification/: constants.py  crud.py  helpers.py  routes.py  schemas.py  services.py  store.py
backend/app/report/: constants.py  routes.py  schemas.py  services.py
backend/app/routers/: test_doc_intelligence.py  test_openai.py
backend/app/rubriques/: extraction.py  models.py
backend/app/rubriques/prompts/: __init__.py  _base.py  patient_info.py  r01_historique.py  r02_clinique.py  r03_traitement.py  r04_professionnel.py  r05_capacite_travail.py  r06_readaptation.py  r07_freins_cognition.py  r08_activites.py
backend/app/services/: azure_document_intelligence.py  azure_openai.py  blob_storage.py  docx_filler.py  fribourg_field_map.py  geneve_field_map.py
backend/app/templates/: docx_compat.py  generic_filler.py  pdf_filler.py  routes.py  schema_extractor.py  schema_labeler.py  schemas.py  services.py  template_classifier.py
backend/app/webhooks/: routes.py
backend/scripts/: regen_report.py
backend/tests/: conftest.py
backend/tests/extraction/: cli.py  conftest.py  fixtures_loader.py  scoring.py  test_pass1_extraction.py  test_pass2_labeling.py
backend/tests/extraction/fixtures/: README.md
(+59 files in other folders)
